# clawq

./: .README.md.kate-swp  .gitignore  CLAUDE.md  Dockerfile.test  Makefile  README.md  _TMP_PLAN_PERSISTED_INBOUND_QUEUE.md  clawq  clawq.opam  dune-project  dune-workspace  justfile
.backlog/: .context.yaml  index.yaml
.plans/: stateless-orbiting-hippo.md
ci/: binary-size-thresholds.tsv
docs/: AGENT_LOOP_RUNTIME_CROSSCHECK.md  ARCHITECTURE.md  CHANNEL_AUTH_RUNTIME_MAP.md  CLAUDE.md  FV_SPEC_IMPL_GAP_AUDIT_2026_03_08.md  GEAR_ALGS.md  MODEL_CACHE_TTLS.md  QUICKSTART.md  SECRET_STORE_RUNTIME_MAP.md  SESSION_ISOLATION_REVIEW_NOTES.md  SLASH_COMMAND_RENDERING_COMPATIBILITY.md  TOOLS.md  UPDATE_BINARY_MODE.md  agent-template-research.md  cli-reference.md  connector-command-registration.md  github-integration.md  memory-policy-isolation-invariants.md  models.csv  package-lock.json  package.json  prompt-caching-research.md  room-agent-architecture.md  verification-boundaries.md
npm-pkg/: LICENSE  README.md  package.json
old-docs/: QUICKSTART.md
reviews/: B756-ux-onboarding-review.md
scripts/: bootstrap_coq.sh  build-install.sh  coq_verify.sh  embed_ui.sh  extract.sh  formal_verification_report.sh  sync_version.sh  update_fv_data.sh
src/: CLAUDE.md  TEAMS_API.md  TELEGRAM_FORMATTING.md  access_explanation.ml  access_snapshot.ml  acp_client.ml  agent.ml  agent_0_compact.ml  agent_1_context.ml  agent_2_tools.ml  agent_cost.ml  agent_loop_conformance.ml  agent_template.ml  agent_template_builtins.ml  agent_tools.ml  ambient_daemon.ml  audit.ml  background_task.ml  (+230 more)
(+1138 files in other folders)
